--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "autoprefixer": "10.4.16",
     "eslint": "8.51.0",
     "eslint-config-next": "13.5.5",
+    "flowbite": "^1.8.1",
+    "flowbite-react": "^0.6.4",
     "next": "13.5.5",
     "postcss": "8.4.31",
     "react": "18.2.0",
